# maestro

./: .clang-ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLogKSDK.txt  Kconfig  LICENSE.txt  README.md  SBOM.spdx.json  SW-Content-Register.txt  audio_examples.cmake  components.cmake  elements.cmake  middleware_maestro_framework.cmake  middleware_maestro_framework_doc.cmake  set.middleware.maestro_framework.yml  set_middleware_maestro_framework.cmake  west-freestanding.yml  west.yml
dockerfiles/: Dockerfile
doxygen/: CeiEncoder.md  Doxyfile_RM  Makefile  ProgrammersGuide.md  aacdec.md  flacdec.md  maestro_playback.md  maestro_record.md  maestro_sync.md  maestro_usb_mic.md  maestro_usb_speaker.md  mp3dec.md  processing_time.md  supported_features.md  wavdec.md
inc/: maestro_logging.h  streamer_api.h  streamer_element_properties.h
manifests/: middleware_nxp_maestro_audio_framework_LPC55S36_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_LPC55S69_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_LPC55S69_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_LPC55S69_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MCXN236_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MCXN547_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MCXN947_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1042_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_MIMXRT1042_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_MIMXRT1042_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1052_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_MIMXRT1052_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_MIMXRT1052_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1062_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_MIMXRT1062_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_MIMXRT1062_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1064_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_MIMXRT1064_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_MIMXRT1064_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1166_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_MIMXRT1166_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_MIMXRT1166_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1176_manifest_v3_10.xml  middleware_nxp_maestro_audio_framework_MIMXRT1176_manifest_v3_13.xml  middleware_nxp_maestro_audio_framework_MIMXRT1176_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT1189_manifest_v3_14.xml  middleware_nxp_maestro_audio_framework_MIMXRT595S_manifest_v3_14.xml  (+4 more)
zephyr/: CMakeLists.txt  Kconfig  README.md  README.rst  module.yml
zephyr/audioTracks/: Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.flac.h  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.m4a.h  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.mp3.h  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.opus_ogg.h  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.opus_ogg_raw.h  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.raw  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.raw.h  Tone_CH0_440HZ_CH1_660HZ_48KHZ_2CHAN_16b.wav.h
zephyr/doc/: Makefile  conf.py  make.bat
zephyr/doc/doc/: .buildinfo  README.html  genindex.html  objects.inv  search.html  searchindex.js
zephyr/doc/doc/.doctrees/: README.doctree  environment.pickle
zephyr/doc/doc/.doctrees/samples/record_ram/: README.doctree
zephyr/doc/doc/.doctrees/samples/record_vit/: README.doctree
zephyr/doc/doc/.doctrees/tests/decoder/: README.doctree
zephyr/doc/doc/.doctrees/tests/encoder/: README.doctree
zephyr/doc/doc/.doctrees/tests/memToMem/: README.doctree
zephyr/doc/doc/_sources/: README.rst.txt
zephyr/doc/doc/_sources/samples/record_ram/: README.rst.txt
zephyr/doc/doc/_sources/samples/record_vit/: README.rst.txt
zephyr/doc/doc/_sources/tests/decoder/: README.rst.txt
zephyr/doc/doc/_sources/tests/memToMem/: README.rst.txt
zephyr/doc/doc/samples/record_ram/: README.html
zephyr/doc/doc/samples/record_vit/: README.html
zephyr/doc/doc/tests/decoder/: README.html
zephyr/doc/doc/tests/encoder/: README.html
zephyr/doc/doc/tests/memToMem/: README.html
zephyr/osa/: CMakeLists.txt  Kconfig  fsl_os_abstraction.h  fsl_os_abstraction_zephyr.c  prj.conf
zephyr/samples/record/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
zephyr/samples/record/src/: app_streamer_element_pcm.c  app_streamer_element_pcm.h  main.c
zephyr/samples/record_ram/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
zephyr/samples/record_ram/src/: main.c
zephyr/samples/record_vit/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
zephyr/samples/record_vit/src/: app_streamer_element_vit.c  main.c
zephyr/samples/vit/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
zephyr/samples/vit/src/: app_streamer_element_pcm.c  app_streamer_element_vit.c  app_streamer_element_vit.h  main.c
zephyr/scripts/: hal_nxp.cmake  list_tests.cmd  patch_osa_hal_nxp_freestanding.cmd  patch_osa_hal_nxp_inZephyr.cmd  patch_osa_remove_duplicite_API.cmd  test_all_redfinch_build.cmd  test_all_redfinch_flash.cmd  test_basic_redfinch_build.cmd  test_basic_redfinch_flash.cmd  test_decoder_redfinch_build.cmd  test_decoder_redfinch_flash.cmd  test_encoder_redfinch_build.cmd  test_encoder_redfinch_flash.cmd  test_memTomem_redfinch_build.cmd  test_memTomem_redfinch_flash.cmd
zephyr/tests/basic/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/tests/basic/src/: main.c
zephyr/tests/decoder/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
zephyr/tests/decoder/src/: decoder.code-workspace  main.c
zephyr/tests/encoder/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
zephyr/tests/encoder/src/: main.c
zephyr/tests/memToMem/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/tests/memToMem/src/: main.c
zephyr/tests/osa/: CMakeLists.txt  Kconfig  README.rst  prj.conf  testcase.yaml
zephyr/tests/osa/src/: main.c
zephyr/wrappers/: fsl_debug_console.h
(+486 files in other folders)
